--- a/Src/Sample.WebApi/ReDoc.html
+++ b/Src/Sample.WebApi/ReDoc.html
@@ -60,8 +60,12 @@
     <script>
         var apis = [
             {
-                name: 'Api',
-                url: 'api/swagger.json'
+                name: 'Common',
+                url: 'common/swagger.json'
+            },
+            {
+                name: 'Admin',
+                url: 'admin/swagger.json'
             },
         ];
 
