--- a/Src/Sample.WebAdmin/public/index.html
+++ b/Src/Sample.WebAdmin/public/index.html
@@ -11,7 +11,15 @@
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
 
-		<link rel="icon" href="<%=BASE_URL%>assets/favicon.ico" />
+		<link rel="icon" href="<%=BASE_URL%>favicon.ico" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css"
+		/>
 	</head>
 
 	<body>
