--- a/Core/ReDoc.html
+++ b/Core/ReDoc.html
@@ -34,6 +34,9 @@
         var options = {
             hideSchemaTitles: true,
             requiredPropsFirst: true,
+            sortTagsAlphabetically: true,
+            sortOperationsAlphabetically: true,
+            expandResponses: '200',
         };
 
         Redoc.init('openapi/swagger.json', options);
